# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  preinstall.sh
src/: CMakeLists.txt  main.cpp
src/advanced-opengl/: CMakeLists.txt
src/advanced-opengl/depth-testing/: CMakeLists.txt  main.cpp  model.h
src/getting-started/: CMakeLists.txt
src/getting-started/recipe-01/: CMakeLists.txt
src/getting-started/recipe-02/: CMakeLists.txt
src/getting-started/recipe-03/: CMakeLists.txt
src/getting-started/recipe-04/: CMakeLists.txt  main.cpp
src/getting-started/recipe-05/: CMakeLists.txt  main.cpp
src/getting-started/recipe-06/: CMakeLists.txt  shader.hpp
src/getting-started/recipe-07/: CMakeLists.txt  main.cpp
src/getting-started/recipe-08/: CMakeLists.txt  main.cpp
src/getting-started/recipe-09/: CMakeLists.txt  main.cpp
src/getting-started/recipe-10/: CMakeLists.txt  main.cpp
src/in-practice/: CMakeLists.txt
src/in-practice/2d-game/: CMakeLists.txt  ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.h  main.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.h
src/in-practice/2d-game/shaders/: sprite.frag  sprite.vs
src/in-practice/box2d/: CMakeLists.txt  main.cpp
src/in-practice/imgui/: CMakeLists.txt  main.cpp  main2.cpp
src/in-practice/imgui-01/: CMakeLists.txt  main.cpp
src/lighting/: CMakeLists.txt
src/lighting/01/: CMakeLists.txt
src/lighting/01-color/: CMakeLists.txt  main.cpp  main2.cpp
src/lighting/02/: CMakeLists.txt  main.cpp  shader.fs
src/lighting/03/: CMakeLists.txt  lightshader.fs  main.cpp  materials.fs  materials.vs  shader.hpp
src/lighting/04/: CMakeLists.txt  main.cpp  materials.fs  materials.vs
src/lighting/05/: CMakeLists.txt  main.cpp  materials.fs
src/lighting/recipe-01/: CMakeLists.txt
src/model-loading/: CMakeLists.txt  main.cpp  model.h
src/recipe-01/: CMakeLists.txt
src/recipe-02/: CMakeLists.txt
src/recipe-03/: CMakeLists.txt  main.cpp
src/recipe-04/: CMakeLists.txt  main.cpp
src/recipe-05/: CMakeLists.txt  main.cpp
src/recipe-06/: CMakeLists.txt  main.cpp
src/recipe-07/: 4.1.texture.vs  CMakeLists.txt
src/recipe-08/: CMakeLists.txt
src/recipe-09/: 4.1.texture.vs  CMakeLists.txt  shader.hpp
src/recipe-10/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp
